updated references in index rmd and html

--- a/index.html
+++ b/index.html
@@ -370,8 +370,9 @@ summary {
 
 
 <p><a href="lab1_rovinsharma.html">Introduction to R and Reproducible Research</a></p>
-<p><span class="citation">@Article</span>{RCoreTeam, Title = {R: A Language and Environment for Statistical Computing}, Author = {{R Core Team}}, Year = {2015},</p>
-<p>Type = {Journal Article}, Url = {<a href="http://www.R-project.org" class="uri">http://www.R-project.org</a>} } #REFERENCE</p>
+<div id="references" class="section level1">
+<h1>REFERENCES</h1>
+</div>
 
 
 
