Updated Lab 2 by adding code chunks. Also added data_raw folder for lab 3

--- a/lab2_rovinsharma.html
+++ b/lab2_rovinsharma.html
@@ -368,10 +368,28 @@ summary {
 </div>
 
 
-<p>###Exercise 1 x &lt;- 3 y &lt;- 15 x + y x - y x * y x / y</p>
-<p>###Exercise 2 x &lt;- 2 y &lt;- 3 x^5 &gt; y^4</p>
-<p>###Exercise 3 x &lt;- c(22, 62, 148, 43, 129) y &lt;- sum (x) y x / y</p>
-<p>###Exercise 4 Nucleotides &lt;- c(“A”, “T”, “C”, “G”) sort (Nucleotides)</p>
+<pre><code>###Exercise 1
+x &lt;- 3
+y &lt;- 15
+x + y
+x - y
+x * y
+x / y
+
+###Exercise 2
+x &lt;- 2
+y &lt;- 3
+x^5 &gt; y^4
+
+###Exercise 3
+x &lt;- c(22, 62, 148, 43, 129)
+y &lt;- sum (x)
+y
+x / y
+
+###Exercise 4
+Nucleotides &lt;- c(&quot;A&quot;, &quot;T&quot;, &quot;C&quot;, &quot;G&quot;)
+sort (Nucleotides)</code></pre>
 <div id="references" class="section level1">
 <h1>REFERENCES</h1>
 </div>
