--- a/lab4_rovinsharma.html
+++ b/lab4_rovinsharma.html
@@ -431,6 +431,46 @@ report_09_12 %&gt;%
   arrange(desc(total_deaths)) %&gt;% 
   slice_head(n = 10) %&gt;% 
   datatable()</code></pre>
+<p><em>5.</em> Setting up objects sorted with necessary data for plots</p>
+<pre><code>report_03_12_cases &lt;- report_03_12 %&gt;% 
+                      group_by(Country_Region) %&gt;% 
+                      summarize(total_cases = sum(Confirmed)) %&gt;% 
+                      arrange(desc(total_cases)) %&gt;% 
+                      slice_head(n = 10)
+
+report_03_12_deaths &lt;- report_03_12 %&gt;% 
+                      group_by(Country_Region) %&gt;% 
+                      summarize(total_deaths = sum(Deaths)) %&gt;% 
+                      arrange(desc(total_deaths)) %&gt;% 
+                      slice_head(n = 10)
+                      
+report_09_12_cases &lt;- report_09_12 %&gt;% 
+                      group_by(Country_Region) %&gt;% 
+                      summarize(total_cases = sum(Confirmed)) %&gt;% 
+                      arrange(desc(total_cases)) %&gt;% 
+                      slice_head(n = 10)  
+
+report_09_12_deaths &lt;- report_09_12 %&gt;% 
+                      group_by(Country_Region) %&gt;% 
+                      summarize(total_deaths = sum(Deaths)) %&gt;% 
+                      arrange(desc(total_deaths)) %&gt;% 
+                      slice_head(n = 10)</code></pre>
+<p>Creating the plots</p>
+<pre><code>report_03_12_cases_plot &lt;- ggplot(report_03_12_cases, aes(x = Country_Region, y = total_cases)) + geom_point()
+
+report_03_12_deaths_plot &lt;- ggplot(report_03_12_deaths, aes(x = Country_Region, y = total_deaths)) + geom_point()
+
+report_09_12_cases_plot &lt;- ggplot(report_09_12_cases, aes(x = Country_Region, y = total_cases)) + geom_point()
+
+report_09_12_deaths_plot &lt;- ggplot(report_09_12_deaths, aes(x = Country_Region, y = total_deaths)) + geom_point()</code></pre>
+<p><em>6.</em> Creating the bar plots</p>
+<pre><code>report_03_12_cases_bar &lt;- ggplot(report_03_12_cases, aes(x = Country_Region, y = total_cases)) + geom_bar(stat = &#39;identity&#39;)
+
+report_03_12_deaths_bar &lt;- ggplot(report_03_12_deaths, aes(x = Country_Region, y = total_deaths)) + geom_bar(stat = &#39;identity&#39;)
+
+report_09_12_cases_bar &lt;- ggplot(report_09_12_cases, aes(x = Country_Region, y = total_cases)) + geom_bar(stat = &#39;identity&#39;)
+
+report_09_12_deaths_bar &lt;- ggplot(report_09_12_deaths, aes(x = Country_Region, y = total_deaths)) + geom_bar(stat = &#39;identity&#39;)</code></pre>
 
 
 
