--- a/index.html
+++ b/index.html
@@ -384,7 +384,8 @@ summary {
 <li><p><a href="lab4_rovinsharma.html">Data Wrangling and Graphing COVID-19 Reporting Data Pt 1</a></p>
 <p><a href="lab4a_rovinsharma.html">Data Visualization with ggplot2 pt 1</a></p>
 <p><a href="lab4b_rovinsharma.html">Data Visualization with ggplot2 pt 2</a></p></li>
-<li><p><a href="lab5_rovinsharma.html">Data Wrangling and Graphing COVID-19 Reporting Data Pt 2</a></p></li>
+<li><p><a href="lab5_rovinsharma.html">Data Wrangling and Graphing COVID-19 Reporting Data Pt 2</a></p>
+<p><a href="lab5x_rovinsharma.html">Extra: Interactive Graphs and Animations</a></p></li>
 </ol>
 </div>
 
