--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@ summary {
 <p><a href="lab4b_rovinsharma.html">Data Visualization with ggplot2 pt 2</a></p></li>
 <li><p><a href="lab5_rovinsharma.html">Data Wrangling and Graphing COVID-19 Reporting Data Pt 2</a></p>
 <p><a href="lab5x_rovinsharma.html">Extra: Interactive Graphs and Animations</a></p></li>
+<li><p><a href="lab6_rovinsharma.html">Data Maps and Interactive Graphs from the COVID-19 reporting data</a></p></li>
 </ol>
 </div>
 
