--- a/lab1_rovinsharma.html
+++ b/lab1_rovinsharma.html
@@ -369,28 +369,33 @@ summary {
 </div>
 
 
-<pre><code>###Exercise 1
+<pre class="r"><code>###Exercise 1
 x &lt;- 3
 y &lt;- 15
-x + y
-x - y
-x * y
-x / y
-
-###Exercise 2
+x + y</code></pre>
+<pre><code>## [1] 18</code></pre>
+<pre class="r"><code>x - y</code></pre>
+<pre><code>## [1] -12</code></pre>
+<pre class="r"><code>x * y</code></pre>
+<pre><code>## [1] 45</code></pre>
+<pre class="r"><code>x / y</code></pre>
+<pre><code>## [1] 0.2</code></pre>
+<pre class="r"><code>###Exercise 2
 x &lt;- 2
 y &lt;- 3
-x^5 &gt; y^4
-
-###Exercise 3
+x^5 &gt; y^4</code></pre>
+<pre><code>## [1] FALSE</code></pre>
+<pre class="r"><code>###Exercise 3
 x &lt;- c(22, 62, 148, 43, 129)
 y &lt;- sum (x)
-y
-x / y
-
-###Exercise 4
+y</code></pre>
+<pre><code>## [1] 404</code></pre>
+<pre class="r"><code>x / y</code></pre>
+<pre><code>## [1] 0.05445545 0.15346535 0.36633663 0.10643564 0.31930693</code></pre>
+<pre class="r"><code>###Exercise 4
 Nucleotides &lt;- c(&quot;A&quot;, &quot;T&quot;, &quot;C&quot;, &quot;G&quot;)
 sort (Nucleotides)</code></pre>
+<pre><code>## [1] &quot;A&quot; &quot;C&quot; &quot;G&quot; &quot;T&quot;</code></pre>
 
 
 
