Updated Index, Uploaded Lab 9A

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ code span.ot { color: #007020; }
 <li><p><a href="lab6_rovinsharma.html">Data Maps and Interactive Graphs from the COVID-19 reporting data</a></p></li>
 <li><p><a href="lab7_rovinsharma.html">RNA-Seq workflow</a></p></li>
 <li><p><a href="lab8_rovinsharma.html">Sequence Alignment, Phylogenetic Analysis and Tree Visualization</a></p></li>
+<li><p><a href="lab9_rovinsharma.html">Regular Expressions</a></p></li>
 </ol>
 </div>
 </article>
