Uploaded lab 11 and index

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@ code span.ot { color: #007020; }
 <li><p><a href="lab7_rovinsharma.html">RNA-Seq workflow</a></p></li>
 <li><p><a href="lab8_rovinsharma.html">Sequence Alignment, Phylogenetic Analysis and Tree Visualization</a></p></li>
 <li><p><a href="lab9_rovinsharma.html">Regular Expressions</a></p></li>
+<li><p><a href="lab10_rovinsharma.html">Population genomics based on high throughput sequencing</a></p></li>
+<li><p><a href="lab11_rovinsharma.html">Microbiome Analysis using dada2 and phyloseq</a></p></li>
 </ol>
 </div>
 </article>
