--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@ code span.ot { color: #007020; }
 <li><p><a href="lab9_rovinsharma.html">Regular Expressions</a></p></li>
 <li><p><a href="lab10_rovinsharma.html">Population genomics based on high throughput sequencing</a></p></li>
 <li><p><a href="lab11_rovinsharma.html">Microbiome Analysis using dada2 and phyloseq</a></p></li>
+<li></li>
+<li><p><a href="https://rovinsharma.github.io/rmd-website/index.html">RMarkdown Website</a></p></li>
 </ol>
 </div>
 </article>
